apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: downloads
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: qbittorrent
